# PsdConvert

./: .gitignore  README.md  config.json  main.py  pyproject.toml
clip_to_psd/tools/: cspng.py
cspng/: __init__.py  __main__.py
cspng/cli/: __init__.py
cspng/core/: converter.py  exceptions.py  image_processor.py  sqlite_handler.py
cspng/tests/: __init__.py  test_converter.py  test_cspng_package.py
psdconvert/: __main__.py
psdconvert/config/: config_loader.py
psdconvert/core/: format_converter.py
src/: __init__.py  archive_processor.py  format_converter.py
src/cspng/: README.md
src/cspng/cli/: main.py
src/cspng/core/: __init__.py  converter.py  file_parser.py
src/cspng/tests/: example_usage.py
src/psdconvert/: __main__.py
src/psdconvert/config/: __init__.py  config.json  config_loader.py
src/psdconvert/core/: archive_processor.py  format_converter.py  input_handler.py  multiprocess_helper.py
src/sha1p/: __init__.py  __main__.py  config.toml  core.py  input_path.py
src/sha1z/: __init__.py  __main__.py  config.toml  core.py  input_path.py
test/: test.py
